[tool.poetry]
name = "leetcomp"
version = "0.1.0"
description = ""
authors = ["kuutsav <kumar.utsav@freshworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"
requests = "^2.27.1"
loguru = "^0.5.3"
pre-commit = "^2.17.0"
mypy = "^0.931"
Unidecode = "^1.3.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
